// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing renders top and bottom spacing for large device (>1024) 1`] = `
<div
  className="etIKEs"
/>
`;

exports[`Spacing renders top and bottom spacing for medium device (767-1023) 1`] = `
<div
  className="dxCXTH"
/>
`;

exports[`Spacing renders top and bottom spacing for small device (480-767) 1`] = `
<div
  className="iXEjXp"
/>
`;

exports[`Spacing renders top and bottom spacing for xLarge device (>1440) 1`] = `
<div
  className="dtUSFT"
/>
`;

exports[`Spacing renders top and bottom spacing for xSmall device (320-479) 1`] = `
<div
  className="fFqNCG"
/>
`;
